--- a/index.html
+++ b/index.html
@@ -9,6 +9,112 @@
     <title>Roberto Portfolio</title>
   </head>
   <body>
+
+      <div class="container navbar">
+        <header>
+          <div class="lgo">
+            <h1>Roberto</h1>
+          </div>
+
+          <nav>
+            <ul>
+
+              <li><a href="#about">Sobre mim</a></li>
+              <li><a href="skills">Conhecimentos</a></li>
+              <li><a href="course">Cursos</a></li>
+            </ul>
+          </nav>
+        </header>
+      </div>
+
+      <div class="container main-info-section">
+        <div class="text">
+          <h1>
+            <span>O</span>
+            <span class="m-left">l</span>
+            <span class="m-left">á</span>
+            <span class="m-left">,</span>
+            <br>
+            <span>S</span>
+            <span class="m-left">o</span>
+            <span class="m-left">u </span>
+            <span class="name">R</span>
+            <span class="m-left name">o</span>
+            <span class="m-left name">b</span>
+            <span class="m-left name">e</span>
+            <span class="m-left name">r</span>
+            <span class="m-left name">t</span>
+            <span class="m-left name">o</span>
+            <span class="m-left">,</span>
+            <br>
+            <span>D</span>
+            <span class="m-left">e</span>
+            <span class="m-left">s</span>
+            <span class="m-left">e</span>
+            <span class="m-left">n</span>
+            <span class="m-left">v</span>
+            <span class="m-left">o</span>
+            <span class="m-left">l</span>
+            <span class="m-left">v</span>
+            <span class="m-left">e</span>
+            <span class="m-left">d</span>
+            <span class="m-left">o</span>
+            <span class="m-left">r</span>
+            <span class="m-left">.</span>
+          </h1>
+
+          <p>JavaScript / Node / React</p>
+          <a href="#contact">Contate-me</a>
+
+        </div>
+      </div>
+
+
+      <div class="container about" id="about">
+
+        <h1>Sobre mim</h1>
+        <div class="about-me-info">
+          <p>Sou fascinado por inovação e curioso por natureza.</p>
+          <p> sempre em busca de conhecimento para expandir meus horizontes e conseguir solucionar diversos problemas, ajudando não só a mim, mas também as pessoas ao meu redor.</p>
+          <p>Gosto de entender como as coisas funcionam para saber quando usá-las. Estou sempre disposto a aprender e ajudar.</p>
+
+        </div>
+      </div>
+
+      <div class="container skills" id="skills">
+        <h1>Conhecimentos</h1>
+
+        <a href="https://www.flaticon.com/br/autores/freepik">
+        <img src="./img/html5.svg" alt="" >
+        </a>
+
+        <a href="https://www.flaticon.com/br/autores/pixel-perfect" title="Pixel perfect">
+          <img src="./img/css-3.svg" alt="">
+        </a> 
+
+        <a href="https://smashicons.com/" title="Smashicons">
+          <img src="./img/js.svg" alt="" >
+        </a>
+
+        <a href="https://www.flaticon.com/authors/freepik" title="Freepik">
+          <img src="./img/php.svg" alt="">
+        </a>
+
+        <a href="https://www.flaticon.com/br/autores/freepik" title="Freepik">
+          <img src="./img/reagir.svg" alt="" >
+        </a>
+
+        <a href="http://www.freepik.com/" title="Freepik">
+          <img src="./img/nodejs.svg" alt="" >
+        </a>
+
+        <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">
+          <img src="./img/sql.svg" alt="">
+        </a>
+
+      </div>
+
+
     <script src="js/ScrollMagic.min.js"></script>
     <script src="js/animation.gsap.min.js"></script>
     <script src="js/TimelineLite.min.js"></script>
