--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
 
           <nav>
             <ul>
-
               <li><a href="#about">Sobre mim</a></li>
-              <li><a href="skills">Conhecimentos</a></li>
-              <li><a href="course">Cursos</a></li>
+              <li><a href="#skills">Conhecimentos</a></li>
+              <li><a href="https://www.linkedin.com/in/roberto--jr/">Contato</a></li>
             </ul>
           </nav>
         </header>
@@ -60,12 +59,21 @@
             <span class="m-left">d</span>
             <span class="m-left">o</span>
             <span class="m-left">r</span>
+            <span>W </span>
+            <span class="m-left">e</span>
+            <span class="m-left">b</span>
             <span class="m-left">.</span>
           </h1>
 
           <p>JavaScript / Node / React</p>
-          <a href="#contact">Contate-me</a>
+          <a href="https://www.linkedin.com/in/roberto--jr/">Contate-me</a>
 
+        </div>
+
+        <div class="profile-image">
+          <a href="https://www.flaticon.com/authors/prettycons" title="prettycons">
+            <img src="./img/coding.svg" alt="">
+          </a>
         </div>
       </div>
 
@@ -79,39 +87,43 @@
           <p>Gosto de entender como as coisas funcionam para saber quando usá-las. Estou sempre disposto a aprender e ajudar.</p>
 
         </div>
+        <img src="./img/dotted-shape.png" alt="">
       </div>
 
-      <div class="container skills" id="skills">
+      <div class="container skill" id="skill">
         <h1>Conhecimentos</h1>
 
-        <a href="https://www.flaticon.com/br/autores/freepik">
-        <img src="./img/html5.svg" alt="" >
-        </a>
+        <div class="skills">
+          <a href="https://www.flaticon.com/br/autores/freepik">
+          <img src="./img/html5.svg" alt="" >
+          </a>
 
-        <a href="https://www.flaticon.com/br/autores/pixel-perfect" title="Pixel perfect">
-          <img src="./img/css-3.svg" alt="">
-        </a> 
+          <a href="https://www.flaticon.com/br/autores/pixel-perfect" title="Pixel perfect">
+            <img src="./img/css-3.svg" alt="">
+          </a> 
 
-        <a href="https://smashicons.com/" title="Smashicons">
-          <img src="./img/js.svg" alt="" >
-        </a>
+          <a href="https://smashicons.com/" title="Smashicons">
+            <img src="./img/js.svg" alt="" >
+          </a>
 
-        <a href="https://www.flaticon.com/authors/freepik" title="Freepik">
-          <img src="./img/php.svg" alt="">
-        </a>
+          <a href="https://www.flaticon.com/authors/freepik" title="Freepik">
+            <img src="./img/php.svg" alt="">
+          </a>
 
-        <a href="https://www.flaticon.com/br/autores/freepik" title="Freepik">
-          <img src="./img/reagir.svg" alt="" >
-        </a>
+          <a href="https://www.flaticon.com/br/autores/freepik" title="Freepik">
+            <img src="./img/reagir.svg" alt="" >
+          </a>
 
-        <a href="http://www.freepik.com/" title="Freepik">
-          <img src="./img/nodejs.svg" alt="" >
-        </a>
+          <a href="http://www.freepik.com/" title="Freepik">
+            <img src="./img/nodejs.svg" alt="" >
+          </a>
 
-        <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">
-          <img src="./img/sql.svg" alt="">
-        </a>
+          <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">
+            <img src="./img/sql.svg" alt="">
+          </a>
 
+          <img src="./img/mongoDB.png" alt="">
+        </div>
       </div>
 
 
