--- a/index.html
+++ b/index.html
@@ -59,10 +59,17 @@
             <span class="m-left">d</span>
             <span class="m-left">o</span>
             <span class="m-left">r</span>
-            <span>W </span>
-            <span class="m-left">e</span>
-            <span class="m-left">b</span>
+            <span> F</span>
+            <span class="m-left">u</span>
+            <span class="m-left">l</span>
+            <span class="m-left">l</span>
+            <span class="m-left">-</span>
+            <span class="m-left">s</span>
+            <span class="m-left">t</span>
+            <span class="m-left">a</span>
+            <span class="m-left">k</span>
             <span class="m-left">.</span>
+
           </h1>
 
           <p>JavaScript / Node / React</p>
