--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
             <span class="m-left">l</span>
             <span class="m-left">l</span>
             <span class="m-left">-</span>
-            <span class="m-left">s</span>
+            <span class="m-left">S</span>
             <span class="m-left">t</span>
             <span class="m-left">a</span>
+            <span class="m-left">c</span>
             <span class="m-left">k</span>
             <span class="m-left">.</span>
 
