--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <span class="m-left">.</span>
           </h1>
 
-          <p>JavaScript / Node / React</p>
+          <p>JavaScript / Node / React / PHP</p>
           <a href="https://www.linkedin.com/in/roberto--jr/">Contate-me</a>
 
         </div>
